# gooroom-applauncher-applet

./: Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  apps.gooroom-applauncher-applet.gschema.xml.in.in  dummy.desktop  kr.gooroom.ApplauncherApplet.panel-applet.in.in  style.css
debian/: changelog  control  copyright  rules
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  appitem.ui  applauncher-appitem.c  applauncher-appitem.h  applauncher-applet-module.c  applauncher-applet.c  applauncher-applet.h  applauncher-directory-item.c  applauncher-directory-item.h  applauncher-indicator.c  applauncher-indicator.h  applauncher-module.c  applauncher-window.c  applauncher-window.h  applauncher-window.ui  directory-item.ui  gresource.xml  indicator.ui
